traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:11: error: method getMondeHauteur has return statement; needs result type
  return h
  ^TraversalByColumn:24: error: method getMondeLargeur has return statement; needs result type
  return l
  ^TraversalByColumn:19: error: type mismatch;
 found   : Unit
 required: Int
  while (!estFaceMur()) {
  ^